--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
-Hello World
+<!DOCTYPE html>
+<html>
+	<head>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Practice</title>
+		<link rel="stylesheet" href="style.css" />
+	</head>
+
+	<body>
+		<div class="container">
+
+			<center>
+				<div class="header">
+					<img src="images/logo.png" alt="logo" />
+					<h2>A WEBSITE DESIGNED TO HELP YOU OUT WHEN PERFORMING TASKS ON YOUR MOBILE DEVICE.</h2><br>
+				</div>
+	</body>
+
+</html>
